--- a/webgpu-sample/tsconfig.json
+++ b/webgpu-sample/tsconfig.json
@@ -13,7 +13,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "types": ["vite/client"]
+    "types": ["vite/client", "@webgpu/types", "@types/dom-webcodecs"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
