--- a/orillusion-clone/tsconfig.json
+++ b/orillusion-clone/tsconfig.json
@@ -15,5 +15,6 @@
     "noImplicitReturns": true,
     "types": ["vite/client"]
   },
-  "include": ["src"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
