--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,14 @@
       "url": "http://localhost:7000",
       "webRoot": "${workspaceFolder}/webgpu-sample/src",
       "sourceMaps": true
+    },
+    {
+      "type": "chrome",
+      "request": "launch",
+      "name": "orillusion-clone",
+      "url": "http://localhost:7200",
+      "webRoot": "${workspaceFolder}/orillusion-clone/src",
+      "sourceMaps": true
     }
   ]
 }
