--- a/orillusion-debug/package.json
+++ b/orillusion-debug/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@mediapipe/tasks-vision": "^0.10.14",
+    "@qdrant/js-client-rest": "^1.10.0",
     "dat.gui": "^0.7.9"
   },
   "devDependencies": {
