--- a/orillusion-debug/package.json
+++ b/orillusion-debug/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@mediapipe/tasks-vision": "^0.10.14",
     "@qdrant/js-client-rest": "^1.10.0",
-    "dat.gui": "^0.7.9"
+    "dat.gui": "^0.7.9",
+    "web-worker": "^1.3.0"
   },
   "devDependencies": {
     "@types/dat.gui": "^0.7.13",
